@@ -1,6 +1,4 @@
 include *.txt *.rst *.py bracelet-generator.* 
-include BraceletGenerator/locale/fr_FR/LC_MESSAGES/BraceletGenerator.mo
-include BraceletGenerator/locale/en_US/LC_MESSAGES/BraceletGenerator.mo
 recursive-include examples *
 recursive-include BraceletGenerator/images *
 recursive-include BraceletGenerator/doc *
