@@ -20,6 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 main
 """
 
+
 import sys
 import os
 from BraceletGenerator.constantes import CONFIG, BRACELET_LOG, BICOLOR_LOG, save_config
@@ -27,14 +28,20 @@ from BraceletGenerator.bracelet import Bracelet
 
 try:
     if len(sys.argv) == 1:
-        Bracelet(string_nb=CONFIG.getint("Bracelet", "string_nb"),
-                 row_nb=CONFIG.getint("Bracelet", "row_nb"),
-                 color=CONFIG.get("Bracelet", "default_color"))
+        app = Bracelet(string_nb=CONFIG.getint("Bracelet", "string_nb"),
+                       row_nb=CONFIG.getint("Bracelet", "row_nb"),
+                       color=CONFIG.get("Bracelet", "default_color"))
     else:
         fichier = os.path.realpath(sys.argv[1])
         app = Bracelet(fichier=fichier)
-        app.mainloop()
+    app.mainloop()
 finally:  # remove logs even if the app crashed to avoid accumulation
-    os.remove(BRACELET_LOG)
-    os.remove(BICOLOR_LOG)
+    try:
+        os.remove(BRACELET_LOG)
+    except FileNotFoundError:
+        pass
+    try:
+        os.remove(BICOLOR_LOG)
+    except FileNotFoundError:
+        pass
     save_config()
