@@ -10,7 +10,7 @@ if platform == 'linux':
     doc = ["BraceletGenerator/doc/doc_install_linux.html",
            "BraceletGenerator/doc/doc_fr_install_linux.html",
            "BraceletGenerator/doc/style.css"]
-    doc.extend(["README.rst"])
+    doc.extend(["README.rst", "changelog"])
     images = [os.path.join("BraceletGenerator", "images", f) for f in os.listdir("BraceletGenerator/images")]
     examples = [os.path.join("examples", f) for f in os.listdir("examples")]
     data_files = [("share/pixmaps", ["bracelet-generator.svg"]),
@@ -25,14 +25,14 @@ if platform == 'linux':
 else:
     files = ["images/*", "doc/doc.html", "doc/doc_fr.html", "doc/style.css", "locale/en_US/LC_MESSAGES/*", "locale/fr_FR/LC_MESSAGES/*"]
     data_files = []
-    
+
 setup(name = "bracelet-generator",
-      version = "1.4.0",
+      version = "1.4.1",
       description = "Friendship bracelet pattern designer",
       author = "Juliette Monsel",
       author_email = "j_4321@protonmail.com",
       url = "https://braceletgenerator.sourceforge.io/",
-      license = "GNU General Public License v3",
+      license = "GPLv3",
       packages = ['BraceletGenerator'],
       package_data = {'BraceletGenerator' : files},
       data_files = data_files,
@@ -41,7 +41,8 @@ setup(name = "bracelet-generator",
 It enables you to easily design your own patterns, add rows and strings, change the colors.
 With the two-colored motif editor, create your motif and the pattern will automatically be generated.
 The patterns can be exported in .png, .jpe, .ps and in text format.""",
-      requires = ["PIL","tkinter","sys","os","pickle","locale","gettext"]
+      requires = ["PIL", "tkinter", "sys", "os", "pickle", "locale", "gettext",
+                  "html", "threading", "urllib", "re"]
 )
 
 
